# cpepper

./: CMakeLists.txt
include/code/: abstracteditor.h  documenteditor.h  project.h
include/codemodel/: abstractcodemodel.h  mintcodemodel.h
include/highlight/: codestylemanager.h  highlightrule.h  minthighlighter.h
share/: CMakeLists.txt  pepper-dark.css  resources.qrc
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/code/: CMakeLists.txt  abstracteditor.cpp  codeeditor.cpp  codeeditor.h  documenteditor.cpp  linenumberarea.cpp  linenumberarea.h  project.cpp
src/lib/codemodel/: CMakeLists.txt  abstractcodemodel.cpp  mintcodemodel.cpp
src/lib/highlight/: CMakeLists.txt  codestylemanager.cpp  highlightrule.cpp  minthighlighter.cpp
